# Sempy

./: .gitignore  .travis.yml  CMakeLists.txt  IntervalTimer.py  Logger.py  README.md  Request.py  Sempy.py  StoppableThread.py  TeaTray.py  Tray.py  Window.py  Wizard.py  Worker.py  main.py  teaTray.py
src/: index.cpp  request.cpp  request.h  tray.cpp  tray.h
